WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84139
[Chromium] REGRESSION: Popup shrinks because of autocomplete
https://bugs.webkit.org/show_bug.cgi?id=84139
Summary
[Chromium] REGRESSION: Popup shrinks because of autocomplete
Alexander Pavlov (apavlov)
Reported
2012-04-17 03:02:49 PDT
With an RTL language, a popup window (opened with window.open) shrinks and moves when a user types in a field with autocompletions available. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=123432
Attachments
Patch
(4.97 KB, patch)
2012-04-17 06:47 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(5.10 KB, patch)
2012-04-18 06:38 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-04-17 06:47:29 PDT
Created
attachment 137531
[details]
Patch
Ilya Sherman
Comment 2
2012-04-17 13:40:38 PDT
Comment on
attachment 137531
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=137531&action=review
I am not a reviewer, but this looks good to me. Thanks for the fix :)
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=84139
nit: Please add a link to the Chromium bug here as well.
Alexander Pavlov (apavlov)
Comment 3
2012-04-18 06:38:40 PDT
Created
attachment 137679
[details]
Patch
Kent Tamura
Comment 4
2012-04-18 09:15:56 PDT
Comment on
attachment 137679
[details]
Patch rubber-stamped
WebKit Review Bot
Comment 5
2012-04-18 09:25:58 PDT
Comment on
attachment 137679
[details]
Patch Clearing flags on attachment: 137679 Committed
r114513
: <
http://trac.webkit.org/changeset/114513
>
WebKit Review Bot
Comment 6
2012-04-18 09:26:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug