[Chromium] REGRESSION: Popup shrinks because of autocomplete https://bugs.webkit.org/show_bug.cgi?id=84139 http://code.google.com/p/chromium/issues/detail?id=123432

Source/WebCore:

Do not update the window rect on the wrong client but instead return the popup widget's
new screen coordinates from the refresh() method.

Reviewed by Kent Tamura.

* platform/chromium/PopupContainer.cpp:
(WebCore::PopupContainer::refresh):
* platform/chromium/PopupContainer.h:
(PopupContainer):

Source/WebKit/chromium:

Do not use the PopupContainer's frameRect() to update the popup client's window rect,
since PopupContainer is always positioned at (0, 0) inside the client's window rect,
and the latter one is positioned relative to the screen origin.

Reviewed by Kent Tamura.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::refreshAutofillPopup):


Canonical link: https://commits.webkit.org/101757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114513 268f45cc-cd09-0410-ab3c-d52691b4dbfc